Filtri konfiguratsiooni täiendused